--- a/index.html
+++ b/index.html
@@ -152,6 +152,28 @@ section { padding: 80px 20px; text-align: center; }
 
 <div id="overlay">
   <img src="Ganesh.png" style="width: 80px;" alt="Ganesh">
+<div class="invitation-card">
+    <div class="ganesh-icon">ॐ</div>
+    
+    <h2>श्री गणेशाय नम:</h2>
+    
+    <div class="shloka">
+        मंगलम भगवान बिष्णु: मंगलम गरुणधोजह<br>
+        मंगलम पुण्डरीकाक्षय: मंगलाय तनोहरी॥
+    </div>
+
+    <div class="content">
+        मंगलमय शुभ घडीमा, बाज्दैछन् शहनाईका स्वर,<br>
+        प्रेमको पावन बन्धनमा बाँधिँदैछन्<br>
+        <span class="names">नयना र सौगात</span>
+        सुन्दर मिलनको यो सुखद क्षण!
+    </div>
+
+    <div class="footer-decoration">
+        🌹✨🌹
+    </div>
+</div>
+
   <h2 style="margin-top:20px;">नयना ❤️ सौगात</h2>
   <p style="color: white; letter-spacing: 2px;">विवाह निमन्त्रणा स्वीकार्नुहोस्</p>
   <button class="enter-btn" onclick="startInvitation()">Open Invitation</button>
