Add family section with details and relationships
Added a new section for family details including names and relationships.

--- a/index.html
+++ b/index.html
@@ -222,6 +222,41 @@ section { padding: 80px 20px; text-align: center; }
     </div>
   </section>
 
+
+  <section id="family" class="fade">
+  <h2 style="margin-bottom: 20px;">👨‍👩‍👧‍👦 आत्मीय परिवार</h2>
+  
+  <div class="card-container">
+    <div class="card" style="border-top: 4px solid var(--gold);">
+      <h3 style="color: var(--maroon);">दर्शनाभिलाषी</h3>
+      <p style="font-size: 1.1rem; font-weight: 600;">सरस्वती कुईकेल</p>
+      <div style="margin-top: 15px; font-size: 0.9rem; color: #666;">
+        <p>प्रार्थी:</p>
+        <p>गणेश प्रसाद कुईकेल / साबीत्रि कुईकेल</p>
+      </div>
+    </div>
+
+    <div class="card" style="border-top: 4px solid var(--gold); max-width: 600px;">
+      <h3 style="color: var(--maroon);">निमन्त्रक (कुईकेल परिवार)</h3>
+      
+      <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin-top: 15px; text-align: left;">
+         <p>• दीपक / सरिता</p>
+         <p>• मणिराम / इन्दिरा</p>
+         <p>• अनन्त / इश्वोरी</p>
+         <p>• शिवजी / रेवती</p>
+      </div>
+
+      <hr style="margin: 20px 0; border: 0; border-top: 1px dashed var(--gold);">
+      
+      <p style="font-weight: 600; margin-bottom: 10px; color: var(--maroon);">भाइ-बहिनी तथा भतिज-भतिजीहरु:</p>
+      <p style="line-height: 1.8; color: #444;">
+        कविता, कपिल, नयन, प्रसिद्धि, मेधा, प्राषना, <br>
+        आशुतोष, रियशा, आभूषण, साश्वत कुईकेल
+      </p>
+    </div>
+  </div>
+</section>
+
   <section id="event" class="fade">
     <h2>📅 कार्यक्रम विवरण</h2>
     <p>📍 स्थान: निजी निवास, कागेश्वरी मनोहरा-४, बाघधारा</p>
