Add additional names to the list in index.html

--- a/index.html
+++ b/index.html
@@ -246,7 +246,9 @@ section { padding: 80px 20px; text-align: center; }
          <p>• दीपक / सरिता</p>
          <p>• मणिराम / इन्दिरा</p>
          <p>• अनन्त / इश्वोरी</p>
+         <p>• सरस्वती /सुजाता भट्टराई</p>
          <p>• शिवजी / रेवती</p>
+         <p>• विमल / सचिता वाग्ले</p>
       </div>
 
       <hr style="margin: 20px 0; border: 0; border-top: 1px dashed var(--gold);">
