Implement floating animation and update overlay
Added floating animation to elements and updated overlay structure.

--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@ h1, h2, h3, p { font-family: 'Noto Serif Devanagari', serif; }
   animation: floatAndRotate 40s linear infinite; 
 }
 
+  
 @keyframes floatAndRotate { 
   0% { transform: rotate(0deg) translateY(0px); }
   50% { transform: rotate(180deg) translateY(-30px); } /* माथि तैरिने */
@@ -204,6 +205,8 @@ section { padding: 80px 20px; text-align: center; }
 
 <div id="overlay">
   <div class="invitation-outer-card">
+    <div style="position: relative; display: inline-block;">
+    <img src="Ganesh_2.png" style="display: block; width: 10 /*ganesh watermark*/
     <div style="font-size: 3rem; color: var(--maroon); margin-bottom: 10px;">ॐ</div>
     
     <h2 style="color: var(--maroon); font-size: 1.8rem; margin-bottom: 10px;">श्री गणेशाय नम:</h2>
@@ -235,9 +238,11 @@ section { padding: 80px 20px; text-align: center; }
     <ul>
       <li><a href="#home">Home</a></li>
       <li><a href="#about">About</a></li>
+      <li><a href="#family">Family</a></li>
       <li><a href="#event">Event</a></li>
       <li><a href="#venue">Venue</a></li>
       <li><a href="#rsvp">RSVP</a></li>
+      
     </ul>
   </nav>
 
