--- a/index.html
+++ b/index.html
@@ -90,6 +90,48 @@ h1, h2, h3, p { font-family: 'Noto Serif Devanagari', serif; }
   background: var(--gold);
   color: var(--maroon);
 }
+/* ================================
+   🌸 Flower Shower Styling
+================================ */
+
+#flower-shower {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none; /* Prevent blocking clicks */
+  overflow: hidden;
+  z-index: 1; /* Keep low so it doesn't overpower content */
+}
+
+/* Individual flower */
+.flower {
+  position: absolute;
+  top: -50px;
+  font-size: 20px;
+  opacity: 0.8;
+  animation: fall linear forwards;
+  will-change: transform;
+}
+
+/* Falling animation */
+@keyframes fall {
+  0% {
+    transform: translateY(0) rotate(0deg);
+  }
+  100% {
+    transform: translateY(110vh) rotate(360deg);
+  }
+}
+
+/* Mobile optimization */
+@media (max-width: 768px) {
+  .flower {
+    font-size: 16px;
+    opacity: 0.7;
+  }
+}
 
        
             
@@ -262,6 +304,9 @@ section { padding: 80px 20px; text-align: center; }
     <img src="mandala_2.svg" class="mandala" style="top: -50px; right: -50px;">
     <img src="mandala_1.svg" class="mandala" style="bottom: -50px; left: -50px;">
   </div>
+    <!-- 🌸 Flower Shower Container -->
+<div id="flower-shower"></div>
+
 
   <section class="hero fade" id="home">
     <img src="Ganesh.png" alt="Ganesh" class="hero-ganesh">
@@ -404,6 +449,55 @@ for(let i=0; i<30; i++) {
   petal.style.animationDuration = (Math.random() * 5 + 5) + "s";
   petalContainer.appendChild(petal);
 }
+  /* ================================
+   🌸 Flower Shower Script
+================================ */
+
+(function () {
+  const container = document.getElementById("flower-shower");
+
+  // Two flower types (theme friendly)
+  const flowers = ["🌸", "🌸","🏵️"];
+
+  const isMobile = window.innerWidth < 768;
+
+  // Fewer flowers on mobile
+  const maxFlowers = isMobile ? 15 : 30;
+
+  function createFlower() {
+    const flower = document.createElement("div");
+    flower.classList.add("flower");
+
+    flower.innerText = flowers[Math.floor(Math.random() * flowers.length)];
+
+    // Random horizontal position
+    flower.style.left = Math.random() * 100 + "vw";
+
+    // Random fall duration
+    const duration = Math.random() * 5 + 5;
+    flower.style.animationDuration = duration + "s";
+
+    // Random size variation
+    const size = Math.random() * 10 + 15;
+    flower.style.fontSize = size + "px";
+
+    container.appendChild(flower);
+
+    // Remove after animation ends (performance safe)
+    setTimeout(() => {
+      flower.remove();
+    }, duration * 1000);
+  }
+
+  // Controlled interval (not cluttered)
+  setInterval(() => {
+    if (container.childElementCount < maxFlowers) {
+      createFlower();
+    }
+  }, 500);
+
+})();
+
 </script>
 </body>
 </html>
