Change flower emoji in index.html

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@ setInterval(() => {
   const container = document.getElementById("flower-shower");
 
   // Two flower types (theme friendly)
-  const flowers = ["🌸", "🌸","🏵️"];
+  const flowers = ["🌸", "💮"];
 
   const isMobile = window.innerWidth < 768;
 
