--- a/index.html
+++ b/index.html
@@ -394,12 +394,16 @@ section { padding: 80px 20px; text-align: center; }
     </div>
   </section>
 
-  <section id="rsvp" class="fade">
-    <h2>✨ RSVP</h2>
-    <form style="max-width:400px; margin: 0 auto;">
-      <input type="text" placeholder="नाम" style="width:100%; padding:10px; margin:10px 0; border:1px solid var(--gold); border-radius:8px;">
-      <button type="button" class="enter-btn" style="width:100%;">Submit</button>
-    </form>
+  <h2>✨ RSVP</h2>
+  <form id="rsvpForm" style="max-width:400px; margin: 0 auto;">
+    <input type="text" name="name" placeholder="नाम" required
+           style="width:100%; padding:10px; margin:10px 0; border:1px solid var(--gold); border-radius:8px;">
+    <input type="text" name="attending" placeholder="आउँदै हुनुहुन्छ? (Yes/No)" 
+           style="width:100%; padding:10px; margin:10px 0; border:1px solid var(--gold); border-radius:8px;">
+    <button type="submit" class="enter-btn" style="width:100%;">Submit</button>
+  </form>
+
+
   </section>
 
   <footer style="padding:40px; background: var(--maroon); color: white; text-align: center;">
@@ -487,6 +491,35 @@ setInterval(() => {
   }, 500);
 
 })();
+
+//RSVP//
+  document.getElementById("rsvpForm").addEventListener("submit", function(e){
+  e.preventDefault();
+
+  const form = e.target;
+  const data = {
+    name: form.name.value,
+    attending: form.attending.value
+  };
+
+  fetch("https://script.google.com/macros/s/AKfycbz0J33F6h_Ssy8NQ9xgmZ9b5T8kRrsn32hV8maWtBQQASAY1iCSGI3ipffaLO5jD67cmQ/exec", {
+    method: "POST",
+    body: JSON.stringify(data),
+    headers: { "Content-Type": "application/json" }
+  })
+  .then(res => res.json())
+  .then(res => {
+    if(res.result === "success") {
+      alert("RSVP submitted successfully! 🙏");
+      form.reset();
+    }
+  })
+  .catch(err => {
+    console.error(err);
+    alert("Something went wrong. Please try again.");
+  });
+});
+
 
 </script>
 
