--- a/index.html
+++ b/index.html
@@ -402,15 +402,8 @@ section { padding: 80px 20px; text-align: center; }
          style="width:100%; padding:10px; margin:10px 0; border:1px solid var(--gold); border-radius:8px;">
   <button type="submit" class="enter-btn" style="width:100%;">Submit</button>
 </form>
-
   </section>
-<form id="rsvpForm" method="POST" style="max-width:400px; margin: 0 auto;">
-  <input type="text" name="name" placeholder="नाम" required
-         style="width:100%; padding:10px; margin:10px 0; border:1px solid var(--gold); border-radius:8px;">
-  <input type="text" name="attending" placeholder="आउँदै हुनुहुन्छ? (Yes/No)"
-         style="width:100%; padding:10px; margin:10px 0; border:1px solid var(--gold); border-radius:8px;">
-  <button type="submit" class="enter-btn" style="width:100%;">Submit</button>
-</form>
+
 
 <!-- THIS SCRIPT MUST COME RIGHT AFTER THE FORM OR AT END OF BODY -->
 <script>
@@ -438,12 +431,12 @@ document.addEventListener("DOMContentLoaded", function() {
       body: new FormData(form)  // simplest – sends all form fields
     })
     .then(function() {
-      alert("RSVP submitted! Check your Google Sheet in a moment 🙏");
+      alert("RSVP submitted!  🙏");
       form.reset();
     })
     .catch(function(err) {
       console.error("Fetch problem:", err);
-      alert("Submission failed – check console for details");
+      console.log("Submission failed – check console for details");
     });
   });
 });
